Correct baseline grid alignment

--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -40,6 +40,8 @@ $line-heights: (
 
 // baseline nudges for type scale ratio of (16/14)^2
 $nudges: (
+  display: 0.35rem,
+  display-mobile: 0.25rem,
   h1-large: 0.55rem,
   h1-mobile: 0.55rem,
   h1: 0.55rem,
@@ -92,6 +94,8 @@ $sph--x-large: $sp-unit * 3 !default;
 
 // Space after text elements
 $sp-after: (
+  display: $spv--x-large,
+  display-mobile: $spv--x-large,
   h1: $spv--x-large,
   h1-mobile: $spv--x-large,
   h2: $spv--x-large,
